workloads/strapi/strapi.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: strapi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strapi
  namespace: strapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strapi
  template:
    metadata:
      labels:
        app: strapi
    spec:
      containers:
        - name: strapi
          image: localhost:5000/hobbymusik-strapi:latest
          ports:
          - containerPort: 1337
          volumeMounts:
            - name: strapi-data
              mountPath: /opt/app/public/uploads
      volumes:
        - name: strapi-data
          persistentVolumeClaim:
            claimName: strapi-pvc
      nodeSelector:
        kubernetes.io/hostname: devplatform01    
---
apiVersion: v1
kind: Service
metadata:
  name: strapi-service
  namespace: strapi
spec:
  selector:
    app: strapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1337
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: strapi-ingress
  namespace: strapi
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"

spec:
  rules:
    - http:
        paths:
          - path: /strapi(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: strapi-service
                port:
                  number: 80
